# loomiq

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/engine/: Cargo.toml
crates/engine/src/: cache.rs  executor.rs  lib.rs  llm.rs  template.rs
