[package]
name = "loomiq-engine"
version = "1.0.0"
edition = "2021"

[dependencies]
loomiq-core = { path = "../core" }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
sha2 = "0.10"
hex = "0.4"
serde_json = "1.0"
regex = "1.8"
thiserror = "1.0"
async-trait = "0.1"
dirs = "6.0.0"
